# docs/swagger.yaml
@@ -29,6 +29,15 @@ definitions:
       role:
         type: string
     type: object
+  api_model.SetPolicyByRole:
+    properties:
+      policys:
+        items:
+          type: string
+        type: array
+      role:
+        type: string
+    type: object
   api_model.SetRoleByUserName:
     properties:
       roles:
@@ -117,21 +126,24 @@ paths:
       tags:
       - policy
     put:
-      description: SetPolicyByRole
+      description: UpdatePolicy
       parameters:
-      - description: PostRole
-        in: body
-        name: PostRole
+      - description: name
+        in: query
+        name: name
         required: true
-        schema:
-          $ref: '#/definitions/api_model.PostRole'
-          type: object
+        type: string
+      - description: policy
+        in: query
+        name: policy
+        required: true
+        type: string
       responses:
         "200":
           description: ok
           schema:
             type: string
-      summary: SetPolicyByRole
+      summary: UpdatePolicy
       tags:
       - policy
   /rbac/policy/byrole:
@@ -140,7 +152,7 @@ paths:
       parameters:
       - description: role
         in: query
-        name: policy
+        name: role
         type: string
       responses:
         "200":
@@ -148,6 +160,24 @@ paths:
           schema:
             type: string
       summary: GetPolicyByRole
+      tags:
+      - policy
+    put:
+      description: SetPolicyByRole
+      parameters:
+      - description: SetPolicyByRole
+        in: body
+        name: SetPolicyByRole
+        required: true
+        schema:
+          $ref: '#/definitions/api_model.SetPolicyByRole'
+          type: object
+      responses:
+        "200":
+          description: ok
+          schema:
+            type: string
+      summary: SetPolicyByRole
       tags:
       - policy
   /rbac/refresh_token:
